--- a/src/pages/p/[slug].astro
+++ b/src/pages/p/[slug].astro
@@ -1,9 +1,7 @@
 ---
 import BaseHead from '@components/BaseHead.astro';
-import SiteHeader from '@components/SiteHeader.astro';
 import PostHeader from '@components/PostHeader.astro';
-import Footer from '@components/Footer.astro';
-import { getAllPosts, getSinglePost } from '@lib/wordpress';
+import { getSinglePost } from '@lib/wordpress';
 import SiteLayout from '@components/SiteLayout.astro';
 import sanitizeHtml from '@lib/sanitizeHtml';
 
@@ -16,8 +14,6 @@ if(!post) {
 		statusText: error
 	})
 }
-
-const { posts } = await getAllPosts();
 
 const { title, content, excerpt, date, featuredImage } = post;
 
@@ -32,7 +28,7 @@ const cleanContent = sanitizeHtml(content);
 		<SiteLayout section="blog">
 			<article class="content">
 				<PostHeader title={title} subtitle={excerpt} date={date} image={featuredImage} />
-				<main class="mt-8 prose prose-lg prose-grid font-serif prose-figcaption:font-sans">
+				<main class="mt-8 prose prose-lg prose-grid font-serif prose-figcaption:font-sans font-normal">
 					<Fragment set:html={cleanContent} />
 				</main>
 			</article>
