--- a/src/components/PostHeader.astro
+++ b/src/components/PostHeader.astro
@@ -12,16 +12,70 @@ export interface Props {
 const { title, subtitle, date, image } = Astro.props;
 ---
 <header class="post-header">
-  <div class="@container w-inset max-w-content mx-auto">
-    <div class="py-[8cqi] desc:mx-auto desc:my-0">
-      <h1 class="font-bold text-[clamp(28px,8cqi,44px)] tracking-[-0.0125em] leading-[1] [font-variation-settings:'wdth'_90] @sm:[font-variation-settings:'wdth'_100] @lg:[font-variation-settings:'wdth'_110] text-zinc-900">{title}</h1>
+  <div class="post-header-content">
+    <h1 class="post-header-title">{title}</h1>
 
-      {subtitle && <p class="my-0 mt-2 dd-post-excerpt text-[clamp(18px,5cqi,24px)] [font-variation-settings:'wdth'_97] leading-snug text-zinc-600">{subtitle}</p>}
+    {subtitle && <p class="post-header-subtitle my-0 mt-2 leading-snug text-zinc-600">{subtitle}</p>}
 
-      {date && <div class="font-semibold uppercase mt-4 mb-0"><Date date={date} /></div>}
-    </div>
-    {image && <figure class="post-featured-image size-large -mx-inset mb-[6cqi]">
-      <img src={image.sourceUrl} alt={image.altText} class="h-full w-full object-cover" />
-    </figure>}
+    {date && <div class="font-semibold uppercase mt-4 mb-0"><Date date={date} /></div>}
   </div>
+  {image && <figure class="post-featured-image size-large -mx-inset mb-[6cqi]">
+    <img src={image.sourceUrl} alt={image.altText} class="h-full w-full object-cover" />
+  </figure>}
 </header>
+
+<style>
+
+.post-header {
+  container-name: post-header;
+  container-type: inline-size;
+  border-block-start: 1px solid theme('colors.slate.100');
+  margin-block-start: -1rem;
+}
+
+.post-header-content {
+  @apply w-inset max-w-content mx-auto desc:mx-auto desc:my-0;
+  padding-block: 8vw;
+  padding-block: 8cqi;
+}
+
+.post-header-title {
+  @apply text-zinc-900;
+
+  font-size: clamp(28px,8vw,44px);
+  font-size: clamp(28px,8cqi,44px);
+
+  letter-spacing: -0.0125em;
+  line-height: 1;
+
+  font-weight: 640;
+  font-variation-settings: 'wdth' 92;
+}
+
+.post-header-subtitle {
+   font-size: clamp(18px, 5vw, 24px);
+   font-size: clamp(18px, 5cqi, 24px);
+   font-variation-settings: 'wdth' 97;
+}
+
+@screen sm {
+  .post-header-title {
+    font-variation-settings: 'wdth' 98;
+  }
+}
+
+@screen md {
+  .post-header-title {
+    font-variation-settings: 'wdth' 112;
+  }
+}
+
+@supports (container-type: inline-size) {
+  @container post-header (min-width: 30rem) {
+    .post-header-title {
+      font-variation-settings: 'wdth' 110;
+    }
+  }
+}
+
+</style>
