Start on dark mode support

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import Icon from "./Icon.astro";
 import { faHeart, faFeed } from "@fortawesome/free-solid-svg-icons"
 
 ---
-<footer class="px-6 text-center my-8 text-sm leading-snug text-text-light">
+<footer class="px-6 mt-20 text-center my-8 text-sm leading-snug text-text-light">
   <div class="site-footer__credit">
     <p class="m-0">Made with <Icon wrapperClass="text-primary" icon={faHeart} /> in New Jersey, U.S.A.</p>
     <p class="text-ink-medium m-0">&ldquo;Have courage, and be kind.&rdquo;</p>
