--- a/src/components/SiteLayout.astro
+++ b/src/components/SiteLayout.astro
@@ -16,7 +16,7 @@ export interface Props {
 const { section } = Astro.props;
 
 ---
-<div class="site-layout bg-stone-100">
+<div class="site-layout grid grid-cols-1 grid-rows-[auto_1fr] min-h-screen">
   <header class="nav-parent h-20 sm:h-20 flex px-8 items-center justify-between">
     <a href="/" class="text-primary relative z-50">
       <Icon icon={faDDLogo} size="2x" />
