--- a/src/components/SiteLayout.astro
+++ b/src/components/SiteLayout.astro
@@ -1,21 +1,31 @@
 ---
-// import SiteHeader from '@components/SiteHeader.astro';
 import Footer from '@components/Footer.astro';
-import Icon from './Icon.astro';
-import { faDDLogo } from '../lib/ddIcon';
+import BaseHead from '@components/BaseHead.astro';
+import NavLink from '@components/NavLink.astro';
+import MenuButton from '@components/MenuButton.svelte';
+
+import Icon from '@components/Icon.astro';
 import { faHomeAlt, faNewspaper } from '@fortawesome/free-solid-svg-icons';
 import { faMastodon, faTwitter } from '@fortawesome/free-brands-svg-icons';
-import NavLink from './NavLink.astro';
-
-import MenuButton from './MenuButton.svelte';
+import { faDDLogo } from '../lib/ddIcon';
 
 export interface Props {
   section?: "home" | "blog";
+  title: string;
+  description: string;
+  permalink: string;
 }
 
-const { section } = Astro.props;
+const { section, title, description, permalink } = Astro.props;
 
 ---
+<html lang="en" data-theme="dark">
+	<head>
+		<BaseHead title={title} description={description} permalink={permalink} />
+	</head>
+
+	<body>
+
 <div class="site-layout grid grid-cols-1 grid-rows-[auto_1fr] min-h-screen">
   <header class="nav-parent h-20 sm:h-20 flex px-8 items-center justify-between">
     <a href="/" class="text-primary relative z-50">
@@ -41,6 +51,9 @@ const { section } = Astro.props;
   </div>
   <Footer />
 </div>
+	</body>
+</html>
+
 <style is:global>
 
   .menu-container {
