--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ allPosts = await getAllPosts();
 // console.log(Astro.request.headers);
 
 ---
-<html lang="en">
+<html lang="en" data-theme="dark">
 	<head>
 		<BaseHead title={title} description={description} permalink={permalink} />
 	</head>
