--- a/src/components/PostHeader.module.scss
+++ b/src/components/PostHeader.module.scss
@@ -1,17 +1,15 @@
 @use "sass:math";
 
-:root {
+.postHeader {
   --post-header-spacing: clamp(48px, #{math.floor(320 / 28)}vw, 64px);
-}
-
-.post-header {
   $percentWidth: math.floor(320 / 28);
 
-  .post-header-inner {
+  .inner {
     @apply w-inset max-w-content mx-auto;
   }
 
-  &__title {
+  .title {
+    @apply text-stone-900 dark:text-white;
     font-size: clamp(30px, #{math.floor((30 / 320) * 100)}vw, 42px);
     font-weight: 640;
     font-variation-settings: "wdth" 118;
@@ -19,14 +17,14 @@
     margin-block-start: var(--post-header-spacing);
   }
 
-  &__subtitle {
+  .subtitle {
     @apply text-stone-500 dark:text-stone-400;
     font-size: clamp(18px, #{math.floor((18 / 320) * 100)}vw, 24px);
     line-height: 1.375;
     margin-block-start: 0.5em;
   }
 
-  &__dateline {
+  .dateline {
     font-size: 18px;
     font-weight: 650;
     text-transform: uppercase;
