--- a/src/pages/posts/posts-page.module.scss
+++ b/src/pages/posts/posts-page.module.scss
@@ -1,16 +1,4 @@
-.postTitle:hover {
-  background-clip: text;
-  background-color: pink;
-  background-image: linear-gradient(90deg, white, red, white);
-  background-size: 200% 100%;
-  color: transparent;
-  display: inline-block;
-  animation-name: slideBackground;
-  animation-iteration-count: infinite;
-  animation-duration: 1s;
-  animation-delay: 0;
-  animation-timing-function: linear;
-}
+@use "sass:color";
 
 @keyframes slideBackground {
   from {
@@ -20,4 +8,23 @@
   to {
     background-position-x: 200%;
   }
+}
+
+.postTitle:hover {
+  background-clip: text;
+  background-color: pink;
+  background-image: linear-gradient(
+    90deg,
+    color.adjust(red, $lightness: 50%),
+    red,
+    color.adjust(red, $lightness: 50%)
+  );
+  background-size: 200% 100%;
+  color: transparent;
+  display: inline-block;
+  animation-name: slideBackground;
+  animation-iteration-count: infinite;
+  animation-duration: 1s;
+  animation-delay: 0;
+  animation-timing-function: linear;
 }
