--- a/src/styles/blog.scss
+++ b/src/styles/blog.scss
@@ -1,5 +1,6 @@
 @use "sass:color";
 @import url("https://cdn.demaree.net/fonts/tiempos/fonts.css");
+@import url("https://cdn.demaree.net/fonts/roslindale/v2/index.css");
 @import "./recursive.css";
 
 @font-face {
@@ -285,14 +286,17 @@ body {
     }
 
     .drop-cap .initial {
-      @apply font-sans;
+      // @apply font-sans;
+      font-family: "roslindale-variable";
       float: left;
       font-size: 3.25em;
       font-variation-settings: "wdth" 96;
-      font-weight: 540;
+      font-weight: 440;
       line-height: 1;
       margin-right: 0.15em;
       transform: translateX(0.025em);
+      min-width: 1em;
+      text-align: center;
     }
 
     .drop-cap .initial:before,
@@ -310,8 +314,10 @@ body {
     @screen sm {
       .drop-cap .initial {
         font-size: 5.25em !important;
-        transform: translateX(0.075em);
+        // transform: translateX(0.075em);
         font-variation-settings: "wdth" 120;
+        min-width: 0.5em;
+        text-shadow: 3px 3px 0px #0002;
       }
 
       .drop-cap .initial:before {
