Add server side dark mode attr to post page

--- a/src/pages/p/[slug].astro
+++ b/src/pages/p/[slug].astro
@@ -20,7 +20,7 @@ const { title, content, excerpt, date, featuredImage } = post;
 const cleanContent = sanitizeHtml(content);
 
 ---
-<html lang="en">
+<html lang="en" data-theme={`light`}>
 	<head>
     <BaseHead title={title} description={excerpt} />
 	</head>
